# rail

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.safe  EVOLUTION.md  FLYWHEEL_ACTION_PLAN.md  FLYWHEEL_AUDIT.md  FLYWHEEL_UPDATE_PLAN.md  FLYWHEEL_V2.md  FORK_B_PLAN.md  GRAMMAR.md  HANDOFF.md  LICENSE  NEXT_SESSION.md  RAIL_HANDOFF.md  RAIL_SAFE_DESIGN.md  README.md  ROADMAP.md  SECURITY.md  SESSION_2026-03-20.md  rail  rail_native  rail_safe  rail_safe.sha256
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ORCHESTRATOR.md  PICKUP-2026-04-06.md  PUNCH_LIST_T1.md  PUNCH_LIST_T2.md  PUNCH_LIST_T3.md  TLS_DESIGN.md  backend-adaptation.md  builtins.md  cascade-training.md  empire-transplant-plan.md  examples.md  ffi-str-return-bug.md  first_lm.md  flywheel-data-quality.md  flywheel-world-research.md  gc-phase0-findings.md  getting-started.md  infrastructure-visuals.md  language-reference.md  metal-pool-design.md  neural-plasma-engine.md  precise-gc-ultraplan.md  rail-effects-plan.md  rail-gc-plan.md  rail-ml-from-scratch.md  rail-plasma.md  railgpt-from-scratch.md  reinforce-lora-plan.md  s0_pcfg.md  self-improving-playbook.md  stdlib.md
examples/: agent.rail  ai_chain.rail  ai_hello.rail  autoresearch_rail.rail  bench.rail  bootstrap.css  calculator.rail  cf_deploy.sh  checkpoint_roundtrip.rail  code_reviewer.rail  concurrency.rail  conductor.rail  conversation.rail  dashboard.css  dashboard.rail  demo.rail  demo_pitch.rail  deploy_bootstrap.rail  deploy_site.rail  effects.rail  error_test.rail  evolve.rail  full.rail  (+15 more)
(+456 files in other folders)
