[package]
name = "rail-language"
version = "0.2.0"
edition = "2024"
description = "Rail — a pure functional, AI-native programming language"
license = "MIT"
repository = "https://github.com/zemo-g/rail"
homepage = "https://github.com/zemo-g/rail"
authors = ["zemo-g"]
keywords = ["language", "functional", "ai", "llm", "interpreter"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
cranelift = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-native = "0.116"

[[bin]]
name = "rail"
path = "src/main.rs"
